el projecto esta en la recta final, ajustar los bloques, las constelaciones, y los registros, revisar el damage source, y terminar y revisar los bloques que faltan